--- a/YouTube_phonetics_pipeline.ipynb
+++ b/YouTube_phonetics_pipeline.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyPbtLpRnZA+OczKTWqS0QvV",
+      "authorship_tag": "ABX9TyMMVY+pdqlCyghswPjDAhOo",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -1242,7 +1242,7 @@
     {
       "cell_type": "code",
       "source": [
-        "# download and install mfa\n",
+        "# download and install mfa test\n",
         "INSTALL_DIR=\"/tmp/mfa\" # path to install directory\n",
         "\n",
         "!bash ./install_mfa.sh {INSTALL_DIR}\n",
