--- a/YouTube_phonetics_pipeline.ipynb
+++ b/YouTube_phonetics_pipeline.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyOp4cA3XovY222NlCe9PHNI",
+      "authorship_tag": "ABX9TyNIjxHum+l7n2NGVRZB579w",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -337,6 +337,15 @@
       "outputs": []
     },
     {
+      "cell_type": "markdown",
+      "source": [
+        "**Step 6: Install the Montreal Forced Aligner**"
+      ],
+      "metadata": {
+        "id": "TFYyIqpXwmVy"
+      }
+    },
+    {
       "cell_type": "code",
       "source": [
         "#mfa\n",
@@ -442,6 +451,15 @@
       "outputs": []
     },
     {
+      "cell_type": "markdown",
+      "source": [
+        "**Step 7: Align the transcript excerpts with the audio excerpts**"
+      ],
+      "metadata": {
+        "id": "UMRpchLOwvZh"
+      }
+    },
+    {
       "cell_type": "code",
       "source": [
         "#Now start the terminal. Copy-paste each of the following two lines, uncommented, into the terminal and \"enter\". \n",
@@ -469,6 +487,15 @@
       "outputs": []
     },
     {
+      "cell_type": "markdown",
+      "source": [
+        "**Step 8: Get F1 and F2 formant values for the vowels**"
+      ],
+      "metadata": {
+        "id": "2YXx6wHkw8Fz"
+      }
+    },
+    {
       "cell_type": "code",
       "source": [
         "grids = glob.glob(\"/content/phonetics_pipeline/CityofGallatin/audio/aligned/*.TextGrid\")\n",
@@ -493,7 +520,7 @@
         "                        vw = sn.extract_part(xmin,xmax)\n",
         "                        #vw.save(x.split(\".\")[0] + \"_vw.wav\", 'WAV')  \n",
         "                        formants = call(vw, \"To Formant (burg)\", 0.0025, 5, 5000, 0.025, 50)\n",
-        "                        for i in np.linspace(0,vw.xmax,11):\n",
+        "                        for i in np.linspace(0,vw.xmax,11): #change this get fewer or more measurements per vowel\n",
         "                            f1 = call(formants, \"Get value at time\", 1, i, 'Hertz', 'Linear')\n",
         "                            f2 = call(formants, \"Get value at time\", 2, i, 'Hertz', 'Linear')\n",
         "                            frame.append([channel,filename,x[\"label\"],z[\"label\"],\n",
@@ -681,6 +708,15 @@
       "outputs": []
     },
     {
+      "cell_type": "markdown",
+      "source": [
+        "**Step 9: Plot the average F1/F2 values for the vowels in the data**"
+      ],
+      "metadata": {
+        "id": "N9g_FqezxdcO"
+      }
+    },
+    {
       "cell_type": "code",
       "source": [
         "#Set up a plot for values in formant space\n",
@@ -772,6 +808,15 @@
       },
       "execution_count": null,
       "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "**Step 10: Plot the intensity and the spectrogram with the words and phones**"
+      ],
+      "metadata": {
+        "id": "gaahw0jHxpbS"
+      }
     },
     {
       "cell_type": "code",
