--- a/YouTube_phonetics_pipeline.ipynb
+++ b/YouTube_phonetics_pipeline.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyNIjxHum+l7n2NGVRZB579w",
+      "authorship_tag": "ABX9TyMpxcoCFtF5Pt8cTuSNb4DC",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -822,7 +822,7 @@
       "cell_type": "code",
       "source": [
         "#Pseudo-Praat-style visualization\n",
-        "import IPython.display as ipd\n",
+        "\n",
         "for x in grids[5:8]:\n",
         "  g1 = textgrids.TextGrid(x)\n",
         "  words = g1.interval_tier_to_array(\"words\")\n",
@@ -855,8 +855,7 @@
         "              horizontalalignment='center',\n",
         "              fontsize=9)\n",
         "      ax4.yaxis.set_visible(False)\n",
-        "  plt.subplots_adjust(wspace=0, hspace=0)\n",
-        "  ipd.display(ipd.Audio(sound))"
+        "  plt.subplots_adjust(wspace=0, hspace=0)\n"
       ],
       "metadata": {
         "id": "xZlk7id4-E6G"
