--- a/YouTube_phonetics_pipeline.ipynb
+++ b/YouTube_phonetics_pipeline.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyMpxcoCFtF5Pt8cTuSNb4DC",
+      "authorship_tag": "ABX9TyNc3xfYxzMcWyUo3AzGLJcr",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -130,7 +130,7 @@
         "                        try:\n",
         "                            items = ydl.extract_info(x)\n",
         "                        except:\n",
-        "                            continue\n"
+        "                            continue"
       ],
       "metadata": {
         "id": "v-obrgXoM6YV"
@@ -177,9 +177,7 @@
         "        text_transcript = [x for y in stripped1 for x in y if x != \" \"]\n",
         "        text_transcript1 = \" \".join(remove_adjacent(text_transcript))\n",
         "        #caption1 = re.sub(\"\\n\",\"\",caption.text).strip()\n",
-        "    return channel_name, video_id,video_title,upload_date,max([get_sec(x) for x in ends]),text_transcript1\n",
-        "                  \n",
-        "\n"
+        "    return channel_name, video_id,video_title,upload_date,max([get_sec(x) for x in ends]),text_transcript1"
       ],
       "metadata": {
         "id": "9q4d2P61yFAm"
@@ -429,8 +427,8 @@
         "!adduser me \n",
         "%load_ext colabxterm\n",
         "\n",
-        "#There are probably better ways to do this in Colab. On a local machine go directly to the command\n",
-        "#source /tmp/mfa/miniconda3/bin/activate aligner; mfa align --clean /content/phonetics_pipeline/CityofGallatin/audio /content/phonetics_pipeline/english_us_arpa.dict /content/phonetics_pipeline/english.zip /content/phonetics_pipeline/CityofGallatin/audio/aligned\n"
+        "#There are probably better ways to do this in Colab. On a machine where you have normal user privileges, comment out the two lines above and uncomment and run the line below\n",
+        "#!source /tmp/mfa/miniconda3/bin/activate aligner; mfa align --clean /content/phonetics_pipeline/CityofGallatin/audio /content/phonetics_pipeline/english_us_arpa.dict /content/phonetics_pipeline/english.zip /content/phonetics_pipeline/CityofGallatin/audio/aligned\n"
       ],
       "metadata": {
         "id": "PC-fciMX88r9"
@@ -518,7 +516,6 @@
         "                        dur = round(float(xmax)-float(xmin),3)\n",
         "                        sn = parselmouth.Sound(sound)\n",
         "                        vw = sn.extract_part(xmin,xmax)\n",
-        "                        #vw.save(x.split(\".\")[0] + \"_vw.wav\", 'WAV')  \n",
         "                        formants = call(vw, \"To Formant (burg)\", 0.0025, 5, 5000, 0.025, 50)\n",
         "                        for i in np.linspace(0,vw.xmax,11): #change this get fewer or more measurements per vowel\n",
         "                            f1 = call(formants, \"Get value at time\", 1, i, 'Hertz', 'Linear')\n",
@@ -749,7 +746,7 @@
     {
       "cell_type": "code",
       "source": [
-        "#This plots the mean values for monophthongs in F1/F2 space. The annotations indicate the number of tokens and number of measurements for the vowel\n",
+        "#This plots the mean values for monophthongs in F1/F2 space. The annotations indicate the number of tokens and measurements per vowel\n",
         "\n",
         "import matplotlib.cm as cm\n",
         "import seaborn as sns\n",
@@ -835,7 +832,7 @@
         "  X, Y = spectrogram.x_grid(), spectrogram.y_grid()\n",
         "  sg_db = 10 * np.log10(spectrogram.values)\n",
         "  ax1.plot(snd.xs(), snd.values.T)\n",
-        "  ax1.set_ylabel(\"intensity [dB]\")\n",
+        "  ax1.set_ylabel(\"intensity\")\n",
         "  ax2.pcolormesh(X, Y, sg_db, vmin=sg_db.max() - 70, cmap='binary')\n",
         "  #ax2.plot(x + 1, -y)\n",
         "  ax2.plot(intensity.xs(), intensity.values.T, linewidth=3, color='w')\n",
