--- a/YouTube_phonetics_pipeline.ipynb
+++ b/YouTube_phonetics_pipeline.ipynb
@@ -275,7 +275,7 @@
       "source": [
         "#This step downloads the targeted audio and transcript segments\n",
         "#In this example we are retrieving all instances of \"need to\" in our small corpus, plus three words to the left and right of the target\n",
-        "#This version works with a data frame in which tokens have the form token_1.00. For a frame where tokens have the form token_POS_1.00, change \n",
+        "#This version works with a data frame in which tokens have the form token_1.00. For a frame where tokens have the form token_POS_1.00, see the comment below\n",
         "\n",
         "hits = []\n",
         "for i,x in vids_df.iterrows():\n",
