--- a/YouTube_phonetics_pipeline.ipynb
+++ b/YouTube_phonetics_pipeline.ipynb
@@ -422,8 +422,8 @@
         "#We need to run MFA in the Linux shell\n",
         "#However, MFA uses a PostgreSQL database that cannot be run as root; in colab you are by default the root user\n",
         "#We can get around this by adding a user, then running MFA in a terminal\n",
-        "#Put the cursor next to \"New password:\" in the window and add a password and press enter. \n",
-        "#Repeat it and leave the other fields blank.\n",
+        "#Put the cursor next to \"New password:\" prompt in the window, add a password, and press enter. \n",
+        "#Repeat it and leave the other fields blank. You may need to manually stop the cell with the ⏹️ button.\n",
         "!adduser me \n",
         "%load_ext colabxterm\n",
         "\n",
