--- a/YouTube_phonetics_pipeline.ipynb
+++ b/YouTube_phonetics_pipeline.ipynb
@@ -363,7 +363,7 @@
         "bash Miniconda3-latest-Linux-x86_64.sh -b -p $root_dir/miniconda3 -f\n",
         "\n",
         "#install MFA\n",
-        "$root_dir/miniconda3/bin/conda create -n aligner -c conda-forge montreal-forced-aligner -y\n",
+        "$root_dir/miniconda3/bin/conda create -n aligner -c conda-forge montreal-forced-aligner scikit-learn=1.2.2 -y #scikit-learn >= 1.3 has a new hdbscan which breaks MFA, as of July 2023\n",
         "\n",
         "echo -e \"\\n======== DONE ==========\"\n",
         "echo -e \"\\nTo activate MFA, run: source $root_dir/miniconda3/bin/activate aligner\"\n",
@@ -396,7 +396,10 @@
       "source": [
         "# download a pretrained English acoustic model and English lexicon\n",
         "!wget -q --show-progress https://github.com/MontrealCorpusTools/mfa-models/raw/main/acoustic/english.zip\n",
-        "!wget -q --show-progress https://github.com/MontrealCorpusTools/mfa-models/raw/main/dictionary/english/us_arpa/english_us_arpa.dict"
+        "!wget -q --show-progress https://github.com/MontrealCorpusTools/mfa-models/raw/main/dictionary/english/us_arpa/english_us_arpa.dict\n"
+        "#These are other dictionaries/models to try:\n"
+        "#!wget -q --show-progress https://github.com/MontrealCorpusTools/mfa-models/releases/download/acoustic-english_mfa-v2.2.1/english_mfa.zip\n"
+        "#!wget -q --show-progress https://github.com/MontrealCorpusTools/mfa-models/releases/download/dictionary-english_mfa-v2.2.1/english_mfa.dict"
       ],
       "metadata": {
         "id": "jH9zo9NqvnZ4"
