--- a/YouTube_phonetics_pipeline.ipynb
+++ b/YouTube_phonetics_pipeline.ipynb
@@ -396,9 +396,9 @@
       "source": [
         "# download a pretrained English acoustic model and English lexicon\n",
         "!wget -q --show-progress https://github.com/MontrealCorpusTools/mfa-models/raw/main/acoustic/english.zip\n",
-        "!wget -q --show-progress https://github.com/MontrealCorpusTools/mfa-models/raw/main/dictionary/english/us_arpa/english_us_arpa.dict\n"
-        "#These are other dictionaries/models to try:\n"
-        "#!wget -q --show-progress https://github.com/MontrealCorpusTools/mfa-models/releases/download/acoustic-english_mfa-v2.2.1/english_mfa.zip\n"
+        "!wget -q --show-progress https://github.com/MontrealCorpusTools/mfa-models/raw/main/dictionary/english/us_arpa/english_us_arpa.dict\n",
+        "#These are other dictionaries/models to try:\n",
+        "#!wget -q --show-progress https://github.com/MontrealCorpusTools/mfa-models/releases/download/acoustic-english_mfa-v2.2.1/english_mfa.zip\n",
         "#!wget -q --show-progress https://github.com/MontrealCorpusTools/mfa-models/releases/download/dictionary-english_mfa-v2.2.1/english_mfa.dict"
       ],
       "metadata": {
