--- a/YouTube_phonetics_pipeline.ipynb
+++ b/YouTube_phonetics_pipeline.ipynb
@@ -510,7 +510,7 @@
         "        #state, channel, file = [y.split(\"/\")[i] for i in [5,6,9]]\n",
         "        channel, file = [y.split(\"/\")[i] for i in [3,6]]\n",
         "        filename = file.replace(\".TextGrid\",\".wav\")\n",
-        "        for x in words:\n",
+        "        for j, x in enumerate(words):\n",
         "            for z in phones:\n",
         "                if  x[\"begin\"] <= z[\"begin\"] < x[\"end\"]:\n",
         "                    if z[\"label\"].startswith((\"A\",\"E\",\"I\",\"O\",\"U\",\"Y\")):\n",
@@ -523,11 +523,11 @@
         "                        for i in np.linspace(0,vw.xmax,11): #change this get fewer or more measurements per vowel\n",
         "                            f1 = call(formants, \"Get value at time\", 1, i, 'Hertz', 'Linear')\n",
         "                            f2 = call(formants, \"Get value at time\", 2, i, 'Hertz', 'Linear')\n",
-        "                            frame.append([channel,filename,x[\"label\"],z[\"label\"],\n",
+        "                            frame.append([channel,filename,j,x[\"label\"],z[\"label\"],\n",
         "                                          dur,round(i/vw.xmax,1),f1,f2])\n",
         "\n",
         "vowels_df = pd.DataFrame(frame)\n",
-        "vowels_df.columns = [\"channel\",\"file\",\"word\",\"vowel\",\"dur\",\"pct\",\"f1\",\"f2\"]\n",
+        "vowels_df.columns = [\"channel\",\"file\",\"wordnr\",\"word\",\"vowel\",\"dur\",\"pct\",\"f1\",\"f2\"]\n",
         "vowels_df1 = vowels_df[vowels_df[\"f1\"].notnull()].reset_index(drop=True)\n",
         "vowels_df1\n",
         "\n"
@@ -770,7 +770,7 @@
         "        #'AY1', 'EY1', 'AW1','OW1',]:\n",
         "\n",
         "    if len(df[df[\"vowel\"]==x].file.unique()) > 0:\n",
-        "                            vowels = len(df[df[\"vowel\"]==x].groupby([\"file\",\"word\"]).size())\n",
+        "                            vowels = len(df[df[\"vowel\"]==x].groupby([\"file\",\"wordnr\"]).size())\n",
         "                            msmts = len(df[df[\"vowel\"]==x])\n",
         "                            pts = np.vstack((df[df[\"vowel\"]==x].groupby(\"pct\")[\"f2\"].mean().values,\n",
         "                                              df[df[\"vowel\"]==x].groupby(\"pct\")[\"f1\"].mean().values))\n",
